Проверьте пожалуйста, указанные недостатки устранил